fixes alignment of copy and navigation

--- a/source/stylesheets/_images.scss
+++ b/source/stylesheets/_images.scss
@@ -74,14 +74,14 @@
   width: 100%;
   z-index: 2;
 
-  @media (min-width: 900px) {
+  @media (min-width: $lg-screen) {
     width: 40%;
   }
 }
 
 .horatio {
   background: transparent url('../../images/Horatio.svg') no-repeat;
-  @media (min-width: 900px) {
+  @media (min-width: $lg-screen) {
     float: right;
     margin-left: 2em;
     top: 1em;
@@ -90,7 +90,7 @@
 
 .hamlet {
   background: transparent url('../../images/Hamlet.svg') no-repeat;
-  @media (min-width: 900px) {
+  @media (min-width: $lg-screen) {
     float: left;
     top: 1em;
   }
